fix:adjust spacing between search elements

--- a/styles/components/pages/shared/Followers.module.css
+++ b/styles/components/pages/shared/Followers.module.css
@@ -119,7 +119,7 @@
   .container {
     display: block;
     width:375px;
-    height: auto;
+    height: 100%;
     background-color: #1B1B1B;/* #121212;*/    
   }
 }
